Revert "fix(theme): OO height on mobile devices"
This reverts commit 8f80c8dc78bded8b47437f2d5b3c35e39553d615.

--- a/themes/esco/scss/reciaStyle.scss
+++ b/themes/esco/scss/reciaStyle.scss
@@ -191,18 +191,11 @@ body {
 		}
 	}
 
-	&#body-public {
-		// Partages par lien public
-		main#content {
-			iframe.onlyoffice-inline,
-			> #app-content > iframe#onlyofficeFrame {
-				height: calc(100vh + 8px);
-			}
-		}
-
-		// Force la hauteur pour l'affichage mobile de OO
-		#content > #app > iframe {
-			height: calc(100dvh - 58px) !important;
+	// Partages par lien public
+	&#body-public main#content {
+		iframe.onlyoffice-inline,
+		> #app-content > iframe#onlyofficeFrame {
+			height: calc(100vh + 8px);
 		}
 	}
 
